[package]
name = "wasm"
version = "0.1.0"
authors = ["Markkus Millend <markkusmillend@icloud.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
console_error_panic_hook = "0.1.6"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.24"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
